--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "generate": "nuxt generate",
     "build": "nuxt build",
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "marked": "^1.1.0",
     "nuxt": "^2.13.0",
     "storyblok-nuxt": "^1.2.0"
