--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "generate": "nuxt generate",
+    "generate": "nuxt build --target static && nuxt export",
     "build": "nuxt build",
     "start": "nuxt start",
     "export": "nuxt export",
