--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nuxt --spa",
     "generate": "nuxt build --target static && nuxt export",
+    "static": "nuxt build --target static && nuxt export && nuxt serve",
     "build": "nuxt build",
     "start": "nuxt start",
     "export": "nuxt export",
