Add lint fix command to package

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "export": "nuxt export",
     "serve": "nuxt serve",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js"
   },
   "dependencies": {
